--- a/stylesheet.css
+++ b/stylesheet.css
@@ -112,7 +112,7 @@ body{
     width: 100%;
     display: flex;
     flex-direction: row;
-    border: 2px green solid;
+    /* border: 2px green solid; */
     /* flex-wrap: wrap; */
 }
 .main-text-box{
