--- a/stylesheet.css
+++ b/stylesheet.css
@@ -223,7 +223,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: -5rem;
+    background: #EDF7F8;
     /* padding-top: 5rem; */
     /* border: 1px red solid; */
 }
@@ -262,6 +262,7 @@ body{
     width: 100%;
     position: relative;
     bottom: 31.56rem;
+    background: #EDF7F8;
     /* border: 1px black solid; */
 }
 .examples-container{
@@ -282,8 +283,8 @@ body{
     padding-left: 6rem;
 }
 .title-container h1{
-    background: #3B8EA5;
-    text-align: center;
+    /* background: #3B8EA5; */
+    /* text-align: center; */
     width: 70%;
     margin: 2rem 0;
     padding: 2rem;
@@ -291,7 +292,7 @@ body{
     border-radius: 25px;
 }
 .desc-container p{
-    background: #3B8EA5;
+    /* background: #3B8EA5; */
     font-size: 23px;
     padding: 1.5rem;
     margin: 0;
@@ -309,8 +310,8 @@ body{
 .title-container-alt h1{
     position: relative;
     float: right;
-    background: #3B8EA5;
-    text-align: center;
+    /* background: #3B8EA5; */
+    text-align: right; 
     width: 70%;
     margin: 2rem 0 ;
     padding: 2rem;
@@ -318,7 +319,7 @@ body{
     border-radius: 25px;
 }
 .desc-container-alt p{
-    background: #3B8EA5;
+    /* background: #3B8EA5; */
     font-size: 23px;
     padding: 1.5rem;
     margin: 0;
@@ -336,5 +337,5 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 25px;
+    /* border-radius: 25px; */
 }
