--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@ body{
     /* background-color: red; */
 }
 .overall-container{
-    height: 12960px;
+    height: 11880px;
     padding: 0;
     margin: 0;
     overflow: hidden;
@@ -15,7 +15,7 @@ body{
     position: relative;
     display:  inline-block;
     /* overflow: hidden; */
-    height: 8.34%;
+    height: 9.091%;
     width: 100%;
     padding: 0;
     margin: 0;
@@ -64,14 +64,14 @@ body{
 }
 /* Section 2 CSS */
 .section-2{
-    height: 8.34%;
+    height: 9.091%;
     width: auto;
     /* border: 2px black solid; */
     background: #3B8DA5;
 }
 #cirlce-group{
     position: relative;
-    z-index: 1;
+    z-index: 4;
     float: right;
     margin: 0 6rem 0 0;
     bottom: 30rem;
@@ -101,7 +101,7 @@ body{
 
 /* Section 3 CSS */
 .section-3{
-    height: 8.34%;
+    height: 9.091%;
     width: 100%;
     /* border: 2px orange solid; */
 }
@@ -151,7 +151,7 @@ body{
     Add more useful code comments*/
 #dashed-circle{
     position: relative;
-    z-index: 3;
+    z-index: 5;
     float: right;
     overflow: hidden;
     -webkit-transform: rotate(135deg);
@@ -163,7 +163,7 @@ body{
 
 /* Section 4 CSS */
 .section-4{
-    height: 8.34%;
+    height: 9.091%;
     width: 100%;
     position: relative;
     overflow: hidden;
@@ -215,10 +215,10 @@ body{
 
 /* Section 5 CSS */
 .section-5{
-    height: 8.34%;
+    height: 9.091%;
     width: 100%;
     position: relative;
-    z-index: 1;
+    z-index: -1;
     bottom: 31.56rem;
     display: flex;
     flex-direction: row;
@@ -229,7 +229,7 @@ body{
 }
 #section-5-circle{
     position: relative;
-    z-index: 1;
+    /* z-index: 1; */
     border-radius: 50%;
     background-color: #3B8EA5;
     aspect-ratio: 1/1;
@@ -258,7 +258,7 @@ body{
 
 /* Section-6 CSS */
 .sections-example{
-    height: 8.34%;
+    height: 9.091%;
     width: 100%;
     position: relative;
     bottom: 31.56rem;
@@ -338,4 +338,99 @@ body{
     height: 100%;
     object-fit: cover;
     /* border-radius: 25px; */
+}
+/* Section 9 CSS */
+.section-9{
+    height: 9.091%;
+    width: 100%;
+    position: relative;
+    background: #3B8EA5;
+    bottom: 31.56rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#interactive-map{
+    /* margin: auto; */
+    width: 80%;
+    height: 80%;
+    background: #EDF7F8;
+    text-align: center;
+}
+.section-10{
+    height: 9.091%;
+    width: 100%;
+    position: relative;
+    background: #EDF7F8;
+    bottom: 31.56rem;
+}
+.section-10 h1{
+    margin: 0;
+    text-align: center;
+    padding: 3rem 0 3rem 0;
+    color: #3B8DA5;
+}
+.type-container{
+    height: calc(100% - 134px);
+    /* height: 100%; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+#img-desc-container{
+    width: 40%;
+    height: 80%;
+    /* border: 1px black solid; */
+}
+#focal-image{
+    width: 70%;
+    /* border-radius: 50%; */
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+
+}
+#focal-container{
+    width: 80%;
+    margin: auto;
+    /* padding-left: 7rem ; */
+}
+#focal-desc{
+    font-size: 18px;
+}
+#focal-heading{
+    margin-bottom: 1rem;
+    padding: 0;
+    font-size: 40px;
+    color: black;
+}
+#icon-list{
+    position: relative;
+    right: 3rem;
+    width: 30%;
+    height: 95%;
+    /* border: 1px red solid; */
+    display: flex;
+    flex-direction: column;
+    /* gap: 1rem; */
+}
+#icon-list h1{
+    color: black;
+}
+.icon-containers{
+    z-index: 10;
+    height: 12%;
+    /* border: 1px black solid; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.icon-containers img{
+    width: 20%;
+}
+.icon-containers h1{
+    margin: auto 0;
+    padding: 0;
+    font-size: 25px;
+    width: 50%;
 }
