--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,34 +11,37 @@ body{
     z-index: -1;
     /* background-color: aqua; */
 }
-#menu{
-    position: fixed;
-    top: 5%;
-    left: 3%;
-    z-index: 10;
+/* Font Section */
+/* 
+font-family: brother-xs, sans-serif;
+font-weight: 300;
+font-style: normal;
+*/
+@font-face {
+    font-family: GeosansLight;
+    src: url(Assests/fonts/GeosansLight.ttf);
 }
-.nav-bar{
-    overflow: hidden;
-    background: #EDF7F8;
-    position: relative;
-    left: 80px;
-    bottom: 38px;
+
+
+h1{
+    font-family: brother-xs, sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
-.nav-bar a{
-    float: right;
-    color: black;
-    background-color: #EDF7F8;
-    /* border-radius: 50%;
-    width: 75px;
-    height: 75px; */
-    padding: 17px 25px;
-    margin: 0 5px;
-    text-decoration: none;
-    font-size: 17px;
+h2{
+   font-family: GeosansLight; 
 }
-#mylinks{
-    display: none;
+p,a{
+    font-family: brother-xs, sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
+
+
+
+
+
+
 /* Sticky Nav Bar */
 #sticky-menu{
     position: fixed;
@@ -47,7 +50,7 @@ body{
 }
 .sticky-nav-bar{
     overflow: hidden;
-    background: rgba(237, 247, 248, 0.9);
+    background: rgba(237, 247, 248, 1);
     position: relative;
     width: 100%;
     height: 70px;
@@ -60,7 +63,7 @@ body{
 }
 #sticky-mylinks a{
     font-size: 20px;
-    text-decoration: underline;
+    text-decoration: none;
     color: black;
     padding: 0px 20px;
 }
@@ -69,7 +72,20 @@ body{
     aspect-ratio: 1/1;
     margin-left: 30px;
 }
-
+#return-top-div{
+    position: fixed;
+    z-index: 15;
+    left: 92%;
+    width: 50px; 
+    top: 85%;
+    border-radius: 50%;
+}
+#return-top-button{
+    border-radius: 50%;
+    display: none;
+    background: none;
+    border: none;
+}
 
 
 
@@ -251,10 +267,10 @@ body{
     float: right;
     background: rgba(59,142,165,0.77);
     width: 60%;
-    height: 20%;
+    height: 25%;
     bottom: 40rem;
     left: 10rem;
-    border-radius: 100px;
+    /* border-radius: 100px; */
     padding: 2em 10rem 2em 2em;
 }
 #communities-text p{
@@ -375,9 +391,11 @@ body{
     /* position: relative; */
     z-index: 4;
     width: 50%;
-    height: 80%;
-    margin: auto 0;
+    height: 90%;
+    margin: 6.5rem 0;
     padding-left: 6rem;
+}.title-container{
+    height: 25%;
 }
 .title-container h1{
     /* background: #3B8EA5; */
@@ -389,12 +407,18 @@ body{
     border-radius: 25px;
     z-index: 4;
 }
-.desc-container p{
+.desc-container{
+
+    height: 100%;
+}
+.desc-container-text{
     /* background: #3B8EA5; */
-    font-size: 23px;
-    padding: 1.5rem;
+    height: calc(100% - 1.5rem);
+    font-size: 20px;
+    padding: 1.5rem 1.5rem 0 1.5rem;
     margin: 0;
     border-radius: 25px;
+
 }
 
 .example-text-container-alt{
@@ -402,9 +426,12 @@ body{
     flex-direction: column;
     z-index: 3;
     width: 50%;
-    height: 80%;
-    margin: auto 0;
+    height: 90%;
+    margin: 6.5rem 0;
     padding-right: 6rem;
+}
+.title-container-alt{
+    height: 25%;
 }
 .title-container-alt h1{
     position: relative;
@@ -417,9 +444,12 @@ body{
     font-size: 60px;
     border-radius: 25px;
 }
-.desc-container-alt p{
+.desc-container-alt{
+    height: 100%;
+}
+.desc-container-text-alt{
     /* background: #3B8EA5; */
-    font-size: 23px;
+    font-size: 20px;
     padding: 1.5rem;
     margin: 0;
     border-radius: 25px;
@@ -483,7 +513,8 @@ body{
     /* border: 1px black solid; */
 }
 #focal-image{
-    width: 70%;
+    width: 60%;
+    aspect-ratio: 1/1;
     /* border-radius: 50%; */
     margin-left: auto;
     margin-right: auto;
@@ -525,8 +556,12 @@ body{
     flex-direction: row;
     justify-content: center;
 }
-.icon-containers img{
+/* .icon-containers img{
     width: 20%;
+} */
+.icon-imgs{
+    width: 100px;
+    height: 100px;
 }
 .icon-containers h1{
     margin: auto 0;
@@ -567,13 +602,14 @@ body{
     position: absolute;
     bottom: 0;
     width: 105%;
-    height: auto;
+    height: 80%;
+    /* max-height: 80%; */
 }
 #info-container{
     position: absolute;
     bottom: 10%;
     width: 100%;
-    height: 50%;
+    height: 40%;
     z-index: 4;
     display: grid;
     grid-template-columns: 1fr 1fr 2fr;
@@ -620,13 +656,16 @@ body{
     color: #A5D6B1;
     font-size: 30px;
 }
-#column-3 input[type=submit]{
+#column-3 input[type=submit], input[type=email]{
     background-color: rgba(0,0,0,0);
     border: none;
     color: #EDF7F8;
     font-size: 30px;
     position: relative;
     float: right;
+}
+#column-3 p{
+    width: 70%;
 }
 #socials{
     display: flex;
@@ -636,8 +675,9 @@ body{
     height: 10%;
     margin-left: 1rem;
 }
-#socials img{
-    width: 10%;
+.social-icons{
+    height: 10%;
+    aspect-ratio: 1/1;
 }
 #nbs-tag{
     position: absolute;
