--- a/stylesheet.css
+++ b/stylesheet.css
@@ -150,12 +150,17 @@ p,a{
     /* border: 2px black solid; */
     background: #3B8DA5;
 }
-#cirlce-group{
-    position: relative;
+/* TODO:  */
+#circle-group{
+    position: absolute;
     z-index: 4;
-    float: right;
+    left: 54%;
+    /* bottom: 100px */
+    top: 140%;
     margin: 0 6rem 0 0;
-    bottom: 30rem;
+    /* bottom: 30rem;    */
+    width: 45%;
+    height: 76%;
 }
 #text-group{
     position: relative;
@@ -168,7 +173,7 @@ p,a{
     position: relative;
     z-index: 3;
     color: #EEF8F9;
-    font-size: 66px;
+    font-size: 4em;
     width: 100%;
     margin: 0;
     text-decoration: none;
@@ -201,6 +206,7 @@ p,a{
 }
 .main-text-box{
     width: 60%;
+    height: 100%;
     /* height: 100%; */
     /* border: 2px black solid; */
     display: flex;
@@ -209,6 +215,7 @@ p,a{
 #text-container1{
     margin: auto;
     width: 55%;
+    height: 70%;
 }
 #text-container1 h1{
     text-align: center;
@@ -216,7 +223,7 @@ p,a{
     text-decoration: underline;
 }
 #text-container1 p{
-    font-size: 25px;
+    font-size: 2vw;
     background: #3B8EA5;
     /* border-radius: 100px; */
     padding: 2em 2.5em;
@@ -391,7 +398,7 @@ p,a{
     /* position: relative; */
     z-index: 4;
     width: 50%;
-    height: 90%;
+    height: 80%;
     margin: 6.5rem 0;
     padding-left: 6rem;
 }.title-container{
@@ -414,6 +421,7 @@ p,a{
 .desc-container-text{
     /* background: #3B8EA5; */
     height: calc(100% - 1.5rem);
+    overflow: hidden;
     font-size: 20px;
     padding: 1.5rem 1.5rem 0 1.5rem;
     margin: 0;
@@ -690,4 +698,19 @@ p,a{
     font-size: 25px;
     color: #EDF7F8;
     margin: 2rem 4rem;
+}
+#backdrop-svg {
+    position: absolute;
+    bottom: 0;
+    width: 105%;
+    height: 80%;
+    /* max-height: 80%; */
+}
+
+
+#form-svg{
+    position: absolute;
+    bottom: 0;
+    width: 1930px;
+    height: 800px;
 }
