--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,12 @@
 body{
     padding: 0;
     margin: 0;
+    /* overflow: hidden; */
     /* background-color: red; */
 }
 .overall-container{
-    height: 11880px;
+    /* 11880px */
+    height: 1283vh;
     padding: 0;
     margin: 0;
     overflow: hidden;
@@ -29,7 +31,9 @@ h1{
     font-style: normal;
 }
 h2{
-   font-family: GeosansLight; 
+   font-family: GeosansLight;
+   font-weight: 300;
+   font-style: normal;
 }
 p,a{
     font-family: brother-xs, sans-serif;
@@ -37,7 +41,9 @@ p,a{
     font-style: normal;
 }
 
-
+canvas {
+    display: block;
+  }
 
 
 
@@ -86,6 +92,10 @@ p,a{
     background: none;
     border: none;
 }
+#return-top-svg{
+    width: 5vw;
+    aspect-ratio: 1/1;
+}
 
 
 
@@ -117,13 +127,14 @@ p,a{
     object-position: 50% 80%;
     /* bottom: 10rem; */
 }
-.scroll-circle{
-    position: relative;
-    float: right;
-    bottom: 25rem;
-    right: 15rem;
+#scroll-circle{
+    position: absolute;
+    width: 12.5vw;
+    aspect-ratio: 1/1;
+    /* bottom: 25rem; */
+    top: 70%;
+    right: 7%;
     z-index: 1;
-    /* top: 500px; */
 }
 #logo-rect{
     position: relative;
@@ -133,9 +144,40 @@ p,a{
     bottom: 40rem;
     right: 2rem;
     width: 60%;
-    height: 40%;
+    height: 20vw;
     background-color: rgba(253,252,253,0.65);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
+#defaultCanvas0{
+    /* background-color: red; */
+    /* border: 2px green solid; */
+    width: 100% !important;
+    height: auto !important;
+    border-radius: 55%;
+}
+#logo-animation{
+    /* margin: 0 auto; */
+    /* vertical-align: center; */
+    width: 35%;
+    aspect-ratio: 1/1;
+    /* border: 1px green solid; */
+    margin: 50px;
+}
+#main-logo-text h1{
+    font-size: 4vw;
+    margin: 0;
+    color: #3B8EA5;
+}
+#main-logo-text h2{
+    font-size: 2.5vw;
+    margin: 0;
+    color: #5AB87C;
+}
+
+
+
 #main-logo-img{
     height: 80%;
     width: 80%; 
@@ -154,45 +196,56 @@ p,a{
 #circle-group{
     position: absolute;
     z-index: 4;
-    left: 54%;
-    /* bottom: 100px */
-    top: 140%;
+    left: 53vw;
+    top: 1200px;
     margin: 0 6rem 0 0;
     /* bottom: 30rem;    */
     width: 45%;
-    height: 76%;
+}
+#report-placeholder{
+    width: 100%;
+
+}
+#report-img-link{
+    width: 20%;
+    position: absolute;
+    left: 46%;
+    top: 50%;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1vw;
+    color: black;
 }
 #text-group{
-    position: relative;
     z-index: 3;
-    margin: 0 0 0 10rem;
+    margin: 0 0 0 10vw;
     padding: 8rem 0 0 0;
     width: 58%;
 }
 #text-group h1{
-    position: relative;
     z-index: 3;
     color: #EEF8F9;
-    font-size: 4em;
+    font-size: 4vw;
     width: 100%;
     margin: 0;
-    text-decoration: none;
-    font-weight: normal;
 }
 #text-group h2{
     color: #EEF8F9;
-    font-size: 40px;
+    font-size: 2vw;
     padding-top: 2rem;
 }
+
+
 
 /* Section 3 CSS */
 .section-3{
     height: 9.091%;
     width: 100%;
     /* border: 2px orange solid; */
+    overflow: hidden;
 }
 #flex-container{
-    position: relative;
+    /* position: relative; */
     bottom: 15.6rem ;
     gap: 0px;
     margin: 0;
@@ -215,19 +268,21 @@ p,a{
 #text-container1{
     margin: auto;
     width: 55%;
-    height: 70%;
+    /* height: 70%; */
 }
 #text-container1 h1{
     text-align: center;
-    font-size: 50px;
-    text-decoration: underline;
+    font-size: 4vw;
+    /* text-decoration: underline; */
+    margin: 0 0 5vh 0;
 }
 #text-container1 p{
-    font-size: 2vw;
+    font-size: 1.25vw;
     background: #3B8EA5;
     /* border-radius: 100px; */
-    padding: 2em 2.5em;
+    padding: 2em 1.5em;
     color: #EEF8F9;
+    margin: 0;
 }
 
 #animation1{
@@ -238,15 +293,18 @@ p,a{
 /* TODO: 
     Add more useful code comments*/
 #dashed-circle{
-    position: relative;
-    z-index: 5;
+    position: absolute;
+    z-index: 1;
     float: right;
     overflow: hidden;
     -webkit-transform: rotate(135deg);
     -ms-transform: rotate(135deg);
     transform: rotate(135deg);
-    bottom: 250px;
-    left: 200px;
+    /* bottom: 4%;
+    left: 12vw; */
+    left: 85vw;
+    /* bottom: 1000px; */
+    /* top: 0; */
 }
 
 /* Section 4 CSS */
@@ -255,17 +313,12 @@ p,a{
     width: 100%;
     position: relative;
     overflow: hidden;
-    /* border: 1px black solid;    */
-    bottom: 505px; 
-    /* display: inline-block; */
-    /* border: 2px black solid; */
 }
 
 .backdrop-image{
     object-fit: cover;
     width: 100%;
     height: 100%;
-    position: relative;
     z-index: 1;
 }
 #communities-text{
@@ -274,18 +327,16 @@ p,a{
     float: right;
     background: rgba(59,142,165,0.77);
     width: 60%;
-    height: 25%;
     bottom: 40rem;
     left: 10rem;
-    /* border-radius: 100px; */
-    padding: 2em 10rem 2em 2em;
+    padding: 1vw 9rem 1vw 1vw;
 }
 #communities-text p{
     margin: auto;
     color: #EEF8F9;
-    font-size: 58px;
+    font-size: 3vw;
     text-align: center;
-    padding: 0 2rem 0 2rem;
+    padding: 0 1em 0 0;
 }
 
 /* TODO: */
@@ -304,7 +355,7 @@ p,a{
     width: 100%;
     position: relative;
     z-index: 1 ;
-    bottom: 31.56rem;
+    /* bottom: 31.56rem; */
     display: flex;
     flex-direction: row;
     /* justify-content: center; */
@@ -355,10 +406,98 @@ p,a{
     height: 9.091%;
     width: 100%;
     position: relative;
-    bottom: 31.56rem;
+    /* bottom: 31.56rem; */
     background: #EDF7F8;
-    /* border: 1px black solid; */
 }
+
+.examples-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3rem;
+    height: calc(100% - 2rem);
+    /* margin: 2rem 2rem 0 2rem; */
+    padding: 2rem 0 0 0;
+}
+.example-text-container{
+    display: flex;
+    flex-direction: column;
+    /* position: relative; */
+    z-index: 4;
+    width: 50%;
+    height: calc(100% - 6.5em);
+    margin-top: 6.5em;
+    padding-left: 4em;
+}
+.title-container{
+    height: 25%;
+}
+.title-container h1{
+    width: 70%;
+    padding-left:2vw ;
+    font-size: 3vw;
+    z-index: 4;
+}
+.desc-container{
+    height: 100%;
+    overflow: hidden;
+}
+.desc-container-text{
+    font-size: 1.1vw;
+    /* padding: 1.5em 1.5em 0 1.5em; */
+    padding-left: 2vw ;
+    margin: 0;
+
+
+}
+
+.example-text-container-alt{
+    display: flex;
+    flex-direction: column;
+    z-index: 3;
+    width: 50%;
+    height: calc(100% - 6.5em);
+    margin: 6.5rem 0;
+    padding-right: 6rem;
+}
+.title-container-alt{
+    height: 25%;
+}
+.title-container-alt h1{
+    position: relative;
+    float: right;
+    text-align: right; 
+    width: 70%;
+    /* padding: 2rem; */
+    padding-right: 2vw;
+    font-size: 3vw;
+}
+.desc-container-alt{
+    height: 100%;
+    overflow: hidden;
+}
+.desc-container-text-alt{
+    font-size: 1.1vw;
+    margin: 0;
+    padding-right: 2vw;
+    border-radius: 25px;
+}
+.example-img-container{
+    width: 50%;
+    height: 90%;
+    position: relative;
+    top: 10%;
+    border-radius: 25px;
+    /* object-fit: cover; */
+}
+.example-img-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* border-radius: 25px; */
+}
+
+
 #example-green-circle{
     position: absolute;
     z-index: 1;
@@ -383,124 +522,39 @@ p,a{
     left: 85%;
     bottom: -25%;
 }
-.examples-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 3rem;
-    height: calc(100% - 2rem);
-    /* margin: 2rem 2rem 0 2rem; */
-    padding: 2rem 0 0 0;
-}
-.example-text-container{
-    display: flex;
-    flex-direction: column;
-    /* position: relative; */
-    z-index: 4;
-    width: 50%;
-    height: 80%;
-    margin: 6.5rem 0;
-    padding-left: 6rem;
-}.title-container{
-    height: 25%;
-}
-.title-container h1{
-    /* background: #3B8EA5; */
-    /* text-align: center; */
-    width: 70%;
-    margin: 2rem 0;
-    padding: 2rem;
-    font-size: 60px;
-    border-radius: 25px;
-    z-index: 4;
-}
-.desc-container{
 
-    height: 100%;
-}
-.desc-container-text{
-    /* background: #3B8EA5; */
-    height: calc(100% - 1.5rem);
-    overflow: hidden;
-    font-size: 20px;
-    padding: 1.5rem 1.5rem 0 1.5rem;
-    margin: 0;
-    border-radius: 25px;
 
-}
 
-.example-text-container-alt{
-    display: flex;
-    flex-direction: column;
-    z-index: 3;
-    width: 50%;
-    height: 90%;
-    margin: 6.5rem 0;
-    padding-right: 6rem;
-}
-.title-container-alt{
-    height: 25%;
-}
-.title-container-alt h1{
-    position: relative;
-    float: right;
-    /* background: #3B8EA5; */
-    text-align: right; 
-    width: 70%;
-    margin: 2rem 0 ;
-    padding: 2rem;
-    font-size: 60px;
-    border-radius: 25px;
-}
-.desc-container-alt{
-    height: 100%;
-}
-.desc-container-text-alt{
-    /* background: #3B8EA5; */
-    font-size: 20px;
-    padding: 1.5rem;
-    margin: 0;
-    border-radius: 25px;
-}
-.example-img-container{
-    width: 50%;
-    height: 90%;
-    position: relative;
-    top: 10%;
-    border-radius: 25px;
-    /* object-fit: cover; */
-}
-.example-img-container img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* border-radius: 25px; */
-}
+
+
+
 /* Section 9 CSS */
 .section-9{
     height: 9.091%;
     width: 100%;
     position: relative;
     background: #3B8EA5;
-    bottom: 31.56rem;
+    /* bottom: 31.56rem; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 #interactive-map{
-    /* margin: auto; */
     width: 80%;
     height: 80%;
     background: #EDF7F8;
     text-align: center;
     z-index: 3;
 }
+
+/* Section 10 */
 .section-10{
     height: 9.091%;
     width: 100%;
     position: relative;
     background: #EDF7F8;
-    bottom: 31.56rem;
+    /* bottom: 31.56rem; */
 }
 .section-10 h1{
     margin: 0;
@@ -510,13 +564,14 @@ p,a{
 }
 .type-container{
     height: calc(100% - 134px);
+    width: 100%;
     /* height: 100%; */
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 #img-desc-container{
-    width: 40%;
+    width: 45%;
     height: 80%;
     /* border: 1px black solid; */
 }
@@ -535,46 +590,44 @@ p,a{
     /* padding-left: 7rem ; */
 }
 #focal-desc{
-    font-size: 18px;
+    font-size: 1vw;
 }
 #focal-heading{
     margin-bottom: 1rem;
     padding: 0;
-    font-size: 40px;
+    font-size: 2.1vw;
     color: black;
 }
 #icon-list{
     position: relative;
     right: 3rem;
-    width: 30%;
+    width: 25%;
     height: 95%;
     /* border: 1px red solid; */
     display: flex;
     flex-direction: column;
+    gap: 0.5vw;
     /* gap: 1rem; */
 }
 #icon-list h1{
     color: black;
 }
 .icon-containers{
-    z-index: 10;
-    height: 12%;
-    /* border: 1px black solid; */
+    z-index: 2;
+    max-height: 12%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    align-items: center;
+    gap: 1vw;
 }
-/* .icon-containers img{
-    width: 20%;
-} */
 .icon-imgs{
-    width: 100px;
-    height: 100px;
+    width: 21%;
+    aspect-ratio: 1/1;
 }
 .icon-containers h1{
     margin: auto 0;
     padding: 0;
-    font-size: 25px;
+    font-size: 1.3vw;
     width: 50%;
 }
 
@@ -584,7 +637,7 @@ p,a{
     width: 100%;
     position: relative;
     background: rgba(0,0,0,0);
-    bottom: 31.56rem;
+    /* bottom: 31.56rem; */
 }
 .img-container{
     position: absolute;
@@ -606,16 +659,10 @@ p,a{
     width: 100%;
     height: 100%;
 }
-#backdrop-svg {
-    position: absolute;
-    bottom: 0;
-    width: 105%;
-    height: 80%;
-    /* max-height: 80%; */
-}
+
 #info-container{
     position: absolute;
-    bottom: 10%;
+    bottom: 25%;
     width: 100%;
     height: 40%;
     z-index: 4;
@@ -626,47 +673,46 @@ p,a{
 #column-1{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding: 5rem 0 0 5rem;
+    gap: 1vw;
+    padding: 5vw 0 0 5vw;
     color: #EDF7F8;
 }
 #column-2{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding: 5rem 0 0 5rem;
+    gap: 1vw;
+    padding: 5vw 0 0 5vw;
     color: #EDF7F8;
 }
 .contact-columns h2{
-    font-size: 40px;
+    font-size: 2.1vw;
     margin: 1rem 0;
 }
 .contact-columns p{
-    font-size: 30px;
+    font-size: 1.6vw;
     margin: 1rem;
 }
 #column-3{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding: 5rem 0 0 5rem;
+    gap: 1vw;
+    padding: 5vw 0 0 5vw;
     color: #EDF7F8; 
 }
 #column-3 form{
-    margin-left: 1rem;
+    margin-left: 1vw;
     border-bottom: 2px solid #EDF7F8;
     width: 70%;
 }
-#column-3 input[type=text]{
+#column-3 input[type=text], input[type=email]{
     width: 80%;
     background: rgba(0,0,0,0);
-    border: none;
+    border: #EDF7F8 1px solid !important;
     color: #A5D6B1;
     font-size: 30px;
 }
-#column-3 input[type=submit], input[type=email]{
+#column-3 input[type=submit]{
     background-color: rgba(0,0,0,0);
-    border: none;
     color: #EDF7F8;
     font-size: 30px;
     position: relative;
@@ -675,13 +721,21 @@ p,a{
 #column-3 p{
     width: 70%;
 }
+#column-3 .button:hover{
+    background-color: #2E687C !important;
+}
+label{
+    font-family: brother-xs, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
 #socials{
     display: flex;
     flex-direction: row;
     gap: 2rem;
     width: 100%;
-    height: 10%;
-    margin-left: 1rem;
+    /* height: 10%; */
+    margin-left: 3.3vw;
 }
 .social-icons{
     height: 10%;
@@ -691,18 +745,22 @@ p,a{
     position: absolute;
     bottom: 0;
     z-index: 4;
-    height: 10%;
+    height: 20%;
     width: 100%;
+    /* border: 1px rebeccapurple solid; */
+    display: flex;
+    flex-direction: column;
 }
 #nbs-tag p{
-    font-size: 25px;
+    font-size: 1.3vw;
     color: #EDF7F8;
-    margin: 2rem 4rem;
+    margin: 1vw 4rem;
 }
 #backdrop-svg {
     position: absolute;
-    bottom: 0;
-    width: 105%;
+    z-index: 1;
+    bottom: -1%;
+    /* width: 105%; */
     height: 80%;
     /* max-height: 80%; */
 }
@@ -711,6 +769,4 @@ p,a{
 #form-svg{
     position: absolute;
     bottom: 0;
-    width: 1930px;
-    height: 800px;
 }
