--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,7 +80,10 @@ canvas {
 #logo-alone{
     width: 60px;
     aspect-ratio: 1/1;
-    margin-left: 30px;
+    margin-left: 60px;
+}
+#logo-alone-link{
+    height: 60px;
 }
 #return-top-div{
     position: fixed;
@@ -173,10 +176,11 @@ canvas {
     font-size: 4vw;
     margin: 0;
     color: #3B8EA5;
+    line-height: 100%;
 }
 #main-logo-text h2{
     font-size: 2.5vw;
-    margin: 0;
+    margin: 2vh 0 0 0;
     color: #5AB87C;
 }
 
@@ -201,9 +205,10 @@ canvas {
     position: absolute;
     z-index: 4;
     left: 53vw;
-    top: 1200px;
+    top: 9.5%;
     margin: 0 6rem 0 0;
     /* bottom: 30rem;    */
+    max-width: 1000px;
     width: 45%;
 }
 #report-placeholder{
@@ -536,7 +541,7 @@ canvas {
     justify-content: center;
     align-items: center;
 }
-#interactive-map{
+#map{
     width: 80%;
     height: 80%;
     background: #EDF7F8;
@@ -580,6 +585,11 @@ canvas {
     display: block;
 
 }
+#nbs-animation{
+    width: 100%;
+    height: 400px;
+}
+
 #focal-container{
     width: 80%;
     margin: auto;
@@ -687,6 +697,12 @@ canvas {
 .contact-columns p{
     font-size: 1.6vw;
     margin: 1rem;
+    color: #EDF7F8; 
+}
+.contact-columns a{
+    font-size: 1.6vw;
+    margin: 1rem;
+    color: #EDF7F8; 
 }
 #column-3{
     display: flex;
@@ -767,6 +783,73 @@ label{
     bottom: 0;
 }
 
+/* Different Pages Banner CSS*/
+
+.banner img{
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.title-rect{
+    position: relative;
+    float: right;
+    z-index: 2;
+    bottom: 35rem;
+    width: 50%;
+    height: 15vw;
+    background-color: rgba(253,252,253,0.65);
+    display: flex;
+    align-items: center;
+}
+.title-rect h1{
+    font-size: 4vw;
+    width: 80%;
+    color: #3B8EA5;
+    margin: 0 0 0 4vw;
+    font-family: brother-xs, sans-serif;
+    font-weight: 200;
+    font-style: normal;
+}
+.text-container{
+    height: 40%;
+    margin: 3vh 0 0 0;
+}
+.text-section{
+    position: relative;
+    width: 30%;
+    left: 15vw;
+    /* float: left; */
+}
+.text-section h1{
+    font-size: 2.5vw;
+    color: #3B8EA5;
+    margin-bottom: 0;
+}
+.text-section p{
+    font-size: 1vw;
+}
+
+.alt-scroll-circle{
+    position: absolute;
+    width: 5vw;
+    aspect-ratio: 1/1;
+    /* bottom: 25rem; */
+    top: 65%;
+    right: 5%;
+    z-index: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
 /* Scrollama CSS */
 .red{
     background: red;
@@ -788,7 +871,19 @@ label{
 }
 .enter-main{
     visibility: visible;
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
     animation: report 3s 1;
+}
+.big-circle{
+    visibility: visible;
+    animation: big-circle 2s 1;
+}
+.dark-green{
+    /* visibility: visible; */
+    animation: dark-green-circle 1.5s 1;
+}
+.light-green{
+    animation: light-green-circle 1.5s 1;
 }
 
 
@@ -815,9 +910,43 @@ label{
 }
 @keyframes report {
     from{
+        transform: translateY(20%);
         opacity: 0;
     }
     to{
+        transform: translateY(0);
         opacity: 1;
+    }
+}
+@keyframes big-circle {
+    from{
+        opacity: 0;
+    }   
+    to{
+        opacity: 0.83;
+    }    
+}
+
+@keyframes dark-green-circle {
+    from{
+        transform: translate(300px, 0px);
+        /* transform: translateY(100%); */
+        /* transform: translateY(20%); */
+        opacity: 0;
+    }   
+    to{
+        transform: translate(0px, 532.541px);
+        /* transform: translateY(0); */
+        opacity: 0.74;
+    }
+}
+@keyframes light-green-circle {
+    from{
+        opacity: 0;
+        transform: translate(0px, 500px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(524.352px, 0px);
     }
 }
