--- a/stylesheet.css
+++ b/stylesheet.css
@@ -159,7 +159,7 @@ canvas {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1vw;
+    gap: 2vw;
 }
 
 #logo-animation{
@@ -271,12 +271,13 @@ canvas {
     /* flex-wrap: wrap; */
 }
 .main-text-box{
-    width: 45%;
+    width: 40%;
     height: 100%;
     /* height: 100%; */
     /* border: 2px black solid; */
     display: flex;
     justify-content: center;
+    margin-left: 5vw;
 }
 #text-container1{
     margin: auto;
@@ -304,7 +305,7 @@ canvas {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: flex-end;
-    padding-left: 100px;
+    /* padding-left: -5.2vw; */
     height: 40%;
     /* border: 2px red solid; */
 }
@@ -406,7 +407,7 @@ canvas {
     position: relative;
     /* z-index: 1; */
     aspect-ratio: 1/1;
-    height: 65%;
+    height: 55%;
 
     display: flex;
     align-items: center;
@@ -421,7 +422,7 @@ canvas {
     position: relative;
     /* z-index: 100; */
     margin: auto 0;
-    width: 30%;
+    width: auto;
     height: 65%;
     /* background: #9CD9EB; */
     /* left: 4rem; */
@@ -429,8 +430,8 @@ canvas {
     align-items: center;
 }
 #graphic-dataVis-container{
-    width: 30vw ;
-    height: 15vw;
+    width: 40vw;
+    height: 20vw;
 }
 /* Section-6 CSS */
 .sections-example{
@@ -471,10 +472,11 @@ canvas {
 }
 .desc-container{
     height: 100%;
+
     overflow: hidden;
 }
 .desc-container-text{
-    font-size: 1.1vw;
+    font-size: 1vw;
     /* padding: 1.5em 1.5em 0 1.5em; */
     padding-left: 2vw ;
     margin: 0;
@@ -569,6 +571,9 @@ canvas {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.section-9 h1{
+    color: #EDF7F8;;
 }
 #map{
     width: 80%;
