--- a/stylesheet.css
+++ b/stylesheet.css
@@ -154,7 +154,7 @@ canvas {
     bottom: 40rem;
     right: 2rem;
     width: 60%;
-    height: 21vw;
+    height: 23vw;
     background-color: rgba(253,252,253,0.65);
     display: flex;
     flex-direction: row;
@@ -662,6 +662,7 @@ canvas {
     display: flex;
     flex-direction: row;
     align-items: center;
+    /* justify-content: flex-start; */
     gap: 1vw;
 }
 .icon-imgs{
@@ -673,6 +674,7 @@ canvas {
     padding: 0;
     font-size: 1.3vw;
     width: 50%;
+    text-align: left;
 }
 
 /* Section 11 CSS */
